k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-generator
  labels:
    app: file-generator
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: file-generator
    spec:
      containers:
        - name: file-generator
          image: registry.datexis.com/ksachs/file-generator:v1
          ports:
            - name: client-port
              containerPort: 8080 
          resources:
            requests:
              cpu: "1"
              memory: "8Gi"
            limits:
              cpu: "4"
              memory: "32Gi"
      restartPolicy: Always
      imagePullSecrets:
        - name: private-registry-auth
  selector:
    matchLabels:
      app: file-generator
