k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: file-generator-service 
spec:
  ports:
    - port: 8080
  selector:
    app: file-generator
